# x17-utef

./: .gitignore  CMakeLists.txt  LinkDef.h  NSplines.h  README.md  VectorField.h  X17Utilities.h  bashrc.sh  rebuild_debug.sh  rebuild_release.sh  sync.sh
Magnetic_field_plot/: bfield.C
data/elmag/: rewriter.cpp
data/ion_map/: map.root
data/ion_map/sample_1.0/: ion10.root  ion100.root  ion101.root  ion102.root  ion103.root  ion104.root  ion106.root  ion108.root  ion111.root  ion113.root  ion114.root  ion118.root  ion12.root  ion122.root  ion124.root  ion125.root  ion126.root  ion127.root  ion129.root  ion13.root  ion130.root  ion132.root  ion135.root  ion138.root  ion140.root  ion142.root  ion146.root  ion148.root  ion149.root  ion150.root  ion152.root  ion153.root  ion155.root  ion158.root  ion159.root  ion16.root  ion163.root  ion164.root  ion166.root  ion167.root  (+76 more)
data/ion_map/sample_2.0/: ion1.root  ion10.root  ion100.root  ion1000.root  ion101.root  ion102.root  ion103.root  ion104.root  ion105.root  ion106.root  ion107.root  ion108.root  ion109.root  ion11.root  ion110.root  ion111.root  ion112.root  ion113.root  ion114.root  ion115.root  ion116.root  ion117.root  ion118.root  ion119.root  ion12.root  ion120.root  ion121.root  ion122.root  ion123.root  ion124.root  ion125.root  ion126.root  ion127.root  ion128.root  ion129.root  ion13.root  ion130.root  ion131.root  ion132.root  ion133.root  (+963 more)
data/micro_tracks/: map_test.root  plot_drift.C  reco_tracks.root  tracks_fit.root
data/micro_tracks/failed_tracks/: jobs_info.txt  tracks1.root  tracks2.root
data/micro_tracks/grid_00/: ionElectronTracks.e18416682  ionElectronTracks.e18416683  ionElectronTracks.e18416684  ionElectronTracks.e18416685  ionElectronTracks.e18416686  ionElectronTracks.e18416687  ionElectronTracks.e18416688  ionElectronTracks.e18416689  ionElectronTracks.e18416690  ionElectronTracks.e18416691  ionElectronTracks.e18416692  ionElectronTracks.e18416693  ionElectronTracks.e18416694  ionElectronTracks.e18416695  ionElectronTracks.e18416696  ionElectronTracks.e18416697  (+2851 more)
data/single_track/: Ar_70_CO2_30_M2A3_noTM.gas
electron_positron_tracks/: CMakeLists.txt  CircleFit3D.h  RK4.h  Task.h  Tasks.h  TrackLoop.h  electrons.root  gas_table.cpp  ion_electrons.cpp  ion_multi.sh  ion_single.sh  make_map.cpp  make_track.cpp  map.root  reco_track.cpp  remote_compile.sh  rk_tracks.cpp
electron_positron_tracks/data/: ion1.root  ion105.root  ion107.root  ion109.root  ion11.root  ion110.root  ion112.root  ion115.root  ion116.root  ion117.root  ion119.root  ion120.root  ion121.root  ion123.root  ion128.root  ion131.root  ion133.root  ion134.root  ion136.root  ion137.root  ion139.root  ion14.root  ion141.root  ion143.root  ion144.root  ion145.root  ion147.root  ion15.root  ion151.root  ion154.root  ion156.root  ion157.root  ion160.root  ion161.root  ion162.root  ion165.root  ion168.root  ion169.root  ion170.root  ion176.root  (+46 more)
include/: CircleFit2D.h  CircleFit3D.h  Color.h  DataPoint.h  Debugging.h  DriftLinePoint.h  EndPoint.h  EndPointDiscrete.h  Field.h  Field.inl  LinearFit.h  MapJob.h  MapPoint.h  MapTask.h  Matrix.h  Matrix.inl  MicroPoint.h  NSpline.h  NSpline.inl  NSplines.h  PadLayout.h  Points.h  RK4.h  RK4.inl  RKPoint.h  RecoPoint.h  Reconstruction.h  StartPoint.h  Tasks.h  Track.h  TrackJob.h  TrackLoop.h  Utilities.h  Utilities.inl  Vector.h  VectorField.h  X17Utilities.h
presentations/: .gitignore  meeting.tex  meeting2.tex  references.bib  seminar.tex
presentations/2023-03-07/: seminar.tex
presentations/2023-04-28/: meeting.tex
presentations/2023-11-10/: meeting.tex
presentations/2023-12-15/: meeting.tex
presentations/drd1_7/: bibliography.bib  drd1_7.tex  figures
presentations/drd1_warsaw/: bibliography2.bib  drd1_warsaw.tex
presentations/images/: atomki_be_big.xcf
presentations/rd51/: meeting.tex
presentations/thesis/: bibliography.bib  thesis.tex
reconstruction/: CMakeLists.txt  MapRecoCompareTask.h  MapRecoTask.h  MicroCircleAndRKFitTask.h  MicroFitAndSaveTask.h  RKFitCircleTask.h  RecoPadsTask.h  RecoTasks.h  map_test.cpp  reco_mtracks.cpp  reco_plots.cpp  reco_test.cpp  reco_track.cpp
reconstruction/clustering/: clustering.sh  clustering_single.sh
remote/: bash_profile.sh  bashrc.sh  clear_data.sh  fetch_data.sh  remote_compile.sh  sync.sh  sync_code.sh
schematics/: GEMReadout_CenteredConector.kicad_pcb  circle_fit2d.ggb  circle_lines.ggb  map_visualization.ggb  phi_systematic_error.ggb  tpc_layout.ggb  tpc_micro_simulation.ggb
simulations/ion_map/: CMakeLists.txt  MapTasks.h  ion_electrons.cpp  ion_multi.sh  ion_single.sh  make_map.cpp
simulations/micro_tracks/: CMakeLists.txt  micro_tracks.cpp  track_multi.sh  track_single.sh
simulations/rk_tracks/: CMakeLists.txt  rk_tracks.cpp
simulations/single_track/: CMakeLists.txt  make_track.cpp
source/: CircleFit2D.cpp  CircleFit3D.cpp  DataPoint.cpp  DriftLinePoint.cpp  EndPoint.cpp  EndPointDiscrete.cpp  Field.cpp  MapJob.cpp  MapPoint.cpp  Matrix.cpp  MicroPoint.cpp  NSpline.cpp  PadLayout.cpp  Points.cpp  RK4.cpp  RKPoint.cpp  RecoPoint.cpp  Reconstruction.cpp  StartPoint.cpp  Track.cpp  TrackJob.cpp  TrackLoop.cpp  Utilities.cpp  Vector.cpp  X17Utilities.cpp
tests/cview_update/: cview_update.C
tests/driftlines/: CMakeLists.txt  plot_drift.cpp
tests/ionoel_pad_dist/: CMakeLists.txt  ionoel_pad_dist.cpp
tests/magnetic_field_plot/: CMakeLists.txt  bfield.C
tests/mardia_test/: CMakeLists.txt  mardia_test.cpp
tests/thesis_plots/: CMakeLists.txt  pad_layout.cpp  test_track.cpp
thesis/: .gitignore  .latexmkrc  Makefile  abstract-cs.tex  abstract-en.tex  acronyms.tex  bibliography.bib  bibliography.tex  chap01.tex  chap02.tex  chap03.tex  chap04.tex  clean_latex.sh  epilog.tex  macros.tex  metadata.tex  old.tex  pdfa.xmpi  preface.tex  thesis.lof  thesis.tex  thesis_references.bib  title.tex  validation_profile.xml  xmp.tex
thesis/figures/: bonus12.xcf  map_3dvis.ggb  pep4_readout.xcf  rk_circle_demo.ggb  rk_circle_demo2.ggb  rk_dist_demo.ggb  trilinear.ggb
thesis/tmp/: pdfa.xmpi
(+13731 files in other folders)
